[features]
aura = []
default = [
    'std',
    'aura',
    'with-rocksdb-weights',
]
manual-seal = ['with-rocksdb-weights']
runtime-benchmarks = [
    'frame-benchmarking',
    'frame-system-benchmarking',
    'frame-system/runtime-benchmarks',
    'pallet-balances/runtime-benchmarks',
    'pallet-grandpa/runtime-benchmarks',
    'pallet-timestamp/runtime-benchmarks',
    'pallet-ethereum/runtime-benchmarks',
    'pallet-evm/runtime-benchmarks',
    'pallet-hotfix-sufficients/runtime-benchmarks',
]
std = [
    'serde',
    'codec/std',
    'scale-info/std',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-consensus-aura/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-io/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-version/std',
    'frame-executive/std',
    'frame-support/std',
    'frame-system/std',
    'pallet-aura/std',
    'pallet-balances/std',
    'pallet-grandpa/std',
    'pallet-sudo/std',
    'pallet-timestamp/std',
    'pallet-transaction-payment/std',
    'frame-system-rpc-runtime-api/std',
    'pallet-transaction-payment-rpc-runtime-api/std',
    'fp-rpc/std',
    'fp-self-contained/std',
    'pallet-base-fee/std',
    'pallet-dynamic-fee/std',
    'pallet-ethereum/std',
    'pallet-evm/std',
    'pallet-evm-chain-id/std',
    'pallet-evm-precompile-modexp/std',
    'pallet-evm-precompile-sha3fips/std',
    'pallet-evm-precompile-simple/std',
    'pallet-hotfix-sufficients/std',
    'pallet-multisig/std',
   'pallet-node-authorization/std',
    'pallet-elysium/std',
    'substrate-validator-set/std',
    'pallet-session/std',
    'log/std'
]
with-paritydb-weights = []
with-rocksdb-weights = []
[build-dependencies.substrate-wasm-builder]
branch = 'polkadot-v0.9.27'
git = 'https://github.com/paritytech/substrate'
version = '5.0.0-dev'
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '3.0.0'

[dependencies.fp-rpc]
default-features = false
git = 'https://github.com/paritytech/frontier.git'
rev = '32f9c7eaf5aa550191c90e14476b145e5d7833d7'

[dependencies.fp-self-contained]
default-features = false
git = 'https://github.com/paritytech/frontier.git'
rev = '32f9c7eaf5aa550191c90e14476b145e5d7833d7'

[dependencies.frame-benchmarking]
branch = 'polkadot-v0.9.27'
default-features = false
git = 'https://github.com/paritytech/substrate'
optional = true
version = '4.0.0-dev'

[dependencies.frame-executive]
branch = 'polkadot-v0.9.27'
default-features = false
git = 'https://github.com/paritytech/substrate'
version = '4.0.0-dev'

[dependencies.frame-support]
branch = 'polkadot-v0.9.27'
default-features = false
git = 'https://github.com/paritytech/substrate'
version = '4.0.0-dev'

[dependencies.frame-system]
branch = 'polkadot-v0.9.27'
default-features = false
git = 'https://github.com/paritytech/substrate'
version = '4.0.0-dev'

[dependencies.frame-system-benchmarking]
branch = 'polkadot-v0.9.27'
default-features = false
git = 'https://github.com/paritytech/substrate'
optional = true
version = '4.0.0-dev'

[dependencies.frame-system-rpc-runtime-api]
branch = 'polkadot-v0.9.27'
default-features = false
git = 'https://github.com/paritytech/substrate'
version = '4.0.0-dev'

[dependencies.pallet-aura]
branch = 'polkadot-v0.9.27'
default-features = false
git = 'https://github.com/paritytech/substrate'
version = '4.0.0-dev'

[dependencies.pallet-balances]
branch = 'polkadot-v0.9.27'
default-features = false
git = 'https://github.com/paritytech/substrate'
version = '4.0.0-dev'

[dependencies.pallet-base-fee]
default-features = false
git = 'https://github.com/paritytech/frontier.git'
rev = '32f9c7eaf5aa550191c90e14476b145e5d7833d7'

[dependencies.pallet-dynamic-fee]
default-features = false
git = 'https://github.com/paritytech/frontier.git'
rev = '32f9c7eaf5aa550191c90e14476b145e5d7833d7'

[dependencies.pallet-ethereum]
default-features = false
git = 'https://github.com/paritytech/frontier.git'
rev = '32f9c7eaf5aa550191c90e14476b145e5d7833d7'

[dependencies.pallet-evm]
default-features = false
git = 'https://github.com/paritytech/frontier.git'
rev = '32f9c7eaf5aa550191c90e14476b145e5d7833d7'

[dependencies.pallet-evm-chain-id]
default-features = false
git = 'https://github.com/paritytech/frontier.git'
rev = '32f9c7eaf5aa550191c90e14476b145e5d7833d7'

[dependencies.pallet-evm-precompile-modexp]
default-features = false
git = 'https://github.com/paritytech/frontier.git'
rev = '32f9c7eaf5aa550191c90e14476b145e5d7833d7'

[dependencies.pallet-evm-precompile-sha3fips]
default-features = false
git = 'https://github.com/paritytech/frontier.git'
rev = '32f9c7eaf5aa550191c90e14476b145e5d7833d7'

[dependencies.pallet-evm-precompile-simple]
default-features = false
git = 'https://github.com/paritytech/frontier.git'
rev = '32f9c7eaf5aa550191c90e14476b145e5d7833d7'

[dependencies.pallet-grandpa]
branch = 'polkadot-v0.9.27'
default-features = false
git = 'https://github.com/paritytech/substrate'
version = '4.0.0-dev'

[dependencies.pallet-randomness-collective-flip]
branch = 'polkadot-v0.9.27'
default-features = false
git = 'https://github.com/paritytech/substrate'
version = '4.0.0-dev'

[dependencies.pallet-hotfix-sufficients]
default-features = false
git = 'https://github.com/paritytech/frontier.git'
rev = '32f9c7eaf5aa550191c90e14476b145e5d7833d7'

[dependencies.pallet-sudo]
branch = 'polkadot-v0.9.27'
default-features = false
git = 'https://github.com/paritytech/substrate'
version = '4.0.0-dev'

[dependencies.pallet-timestamp]
branch = 'polkadot-v0.9.27'
default-features = false
git = 'https://github.com/paritytech/substrate'
version = '4.0.0-dev'

[dependencies.pallet-transaction-payment]
branch = 'polkadot-v0.9.27'
default-features = false
git = 'https://github.com/paritytech/substrate'
version = '4.0.0-dev'

[dependencies.pallet-transaction-payment-rpc-runtime-api]
branch = 'polkadot-v0.9.27'
default-features = false
git = 'https://github.com/paritytech/substrate'
version = '4.0.0-dev'

[dependencies.scale-info]
default-features = false
features = ['derive']
version = '2.1.2'

[dependencies.serde]
features = ['derive']
optional = true
version = '1.0.144'

[dependencies.sp-api]
branch = 'polkadot-v0.9.27'
default-features = false
git = 'https://github.com/paritytech/substrate'
version = '4.0.0-dev'

[dependencies.sp-block-builder]
branch = 'polkadot-v0.9.27'
default-features = false
git = 'https://github.com/paritytech/substrate'
version = '4.0.0-dev'

[dependencies.sp-consensus-aura]
branch = 'polkadot-v0.9.27'
default-features = false
git = 'https://github.com/paritytech/substrate'
version = '0.10.0-dev'

[dependencies.sp-core]
branch = 'polkadot-v0.9.27'
default-features = false
git = 'https://github.com/paritytech/substrate'
version = '6.0.0'

[dependencies.sp-inherents]
branch = 'polkadot-v0.9.27'
default-features = false
git = 'https://github.com/paritytech/substrate'
version = '4.0.0-dev'

[dependencies.sp-io]
branch = 'polkadot-v0.9.27'
default-features = false
git = 'https://github.com/paritytech/substrate'
version = '6.0.0'

[dependencies.sp-offchain]
branch = 'polkadot-v0.9.27'
default-features = false
git = 'https://github.com/paritytech/substrate'
version = '4.0.0-dev'

[dependencies.sp-runtime]
branch = 'polkadot-v0.9.27'
default-features = false
git = 'https://github.com/paritytech/substrate'
version = '6.0.0'

[dependencies.sp-session]
branch = 'polkadot-v0.9.27'
default-features = false
git = 'https://github.com/paritytech/substrate'
version = '4.0.0-dev'

[dependencies.sp-std]
branch = 'polkadot-v0.9.27'
default-features = false
git = 'https://github.com/paritytech/substrate'
version = '4.0.0'

[dependencies.sp-transaction-pool]
branch = 'polkadot-v0.9.27'
default-features = false
git = 'https://github.com/paritytech/substrate'
version = '4.0.0-dev'

[dependencies.sp-version]
branch = 'polkadot-v0.9.27'
default-features = false
git = 'https://github.com/paritytech/substrate'
version = '5.0.0'

[dependencies.pallet-multisig]
branch = 'polkadot-v0.9.27'
default-features = false
git = 'https://github.com/paritytech/substrate'
version = '4.0.0-dev'

[dependencies.pallet-node-authorization]
branch = 'polkadot-v0.9.27'
default-features = false
git = 'https://github.com/paritytech/substrate'
version = '4.0.0-dev'

[dependencies.pallet-authorship]
branch = 'polkadot-v0.9.27'
default-features = false
git = 'https://github.com/paritytech/substrate'
version = '4.0.0-dev'

[dependencies.pallet-elysium]
path = '../pallets/elysium'
default-features = false
version = '4.0.0-dev'


#[dependencies.substrate-validator-set]
#default-features = false
#package = 'substrate-substrate-validator-set'
#git = 'https://github.com/gautamdhameja/substrate-validator-set.git'
#version = '0.9.23'
#tag = '0.9.27'

[dependencies.substrate-validator-set]
path = '../pallets/substrate-validator-set'
default-features = false
version = '0.9.27'

[dependencies.pallet-session]
branch = 'polkadot-v0.9.27'
git = 'https://github.com/paritytech/substrate'
default-features = false
version = '4.0.0-dev'

[dependencies.log]
default-features = false
version = '0.4.17'

[package]
name = 'elysium-runtime'
authors = ['Bloxbytes']
build = 'build.rs'
description = 'Elysium provides the lightning-fast transaction speeds and unprecedented scalability. Elysium is optimized for your Game, NFT, AI, or metaverse project.'
edition = '2021'
homepage = 'https://elysiumchain.tech/'
license = 'GPL-3.0-only'
publish = false
repository = 'https://github.com/VForged/elysium'
version = '7.0.0'
[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']
[dependencies]
smallvec = "1.10.0"