[package]
name = 'pallet-elysium'
version = '4.0.0-dev'
description = 'elysium pallet to allow generation of coins for sudo users.'
authors = { workspace = true }
homepage = 'https://web-elysium.vulcanforged.com/'
edition = { workspace = true }
license = 'GPL-3.0-only'
publish = false
repository = { workspace = true }

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
scale-codec = { package = "parity-scale-codec", workspace = true }
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
serde = { workspace = true }
scale-info = { workspace = true }
sp-io = { workspace = true }
sp-std = { workspace = true }
log = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }

[features]
default = ['std']
runtime-benchmarks = ['frame-benchmarking']
std = [
    'scale-codec/std',
    'scale-info/std',
    'frame-support/std',
    'frame-system/std',
    'frame-benchmarking/std',
    'sp-std/std',
]
try-runtime = ['frame-support/try-runtime']