[package]
name = 'substrate-validator-set'
version = '0.9.30'
authors = ['Gautam Dhameja <quasijatt@outlook.com>']
edition = { workspace = true }
license = 'Apache-2.0'
repository = { workspace = true }

[dev-dependencies]
serde = { workspace = true }

[dependencies]
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
log = { workspace = true }
scale-codec = { package = "parity-scale-codec", workspace = true }
scale-info = { workspace = true }
syn = { workspace = true }
sp-staking = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-session = { workspace = true, features = ['historical'] }

[features]
default = ['std']
runtime-benchmarks = ['frame-benchmarking']
std = [
    'scale-codec/std',
    'frame-benchmarking/std',
    'frame-support/std',
    'frame-system/std',
    'scale-info/std',
    'sp-core/std',
    'sp-io/std',
    'sp-std/std',
    'sp-runtime/std',
    'pallet-session/std'
]
try-runtime = ['frame-support/try-runtime']