[package]
name = 'pallet-elysium'
version = '4.0.0-dev'
description = 'elysium pallet to allow generation of coins for sudo users.'
authors = ['Bloxbytes']
homepage = 'https://web-elysium.vulcanforged.com/'
edition = '2021'
license = 'GPL-3.0-only'
publish = false
repository = 'https://github.com/VaivalGithub/elysium.git'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '3.0.0'

[dependencies.frame-benchmarking]
branch = 'polkadot-v0.9.27'
default-features = false
git = 'https://github.com/paritytech/substrate'
optional = true
version = '4.0.0-dev'

[dependencies.frame-support]
branch = 'polkadot-v0.9.27'
default-features = false
git = 'https://github.com/paritytech/substrate'
version = '4.0.0-dev'

[dependencies.frame-system]
branch = 'polkadot-v0.9.27'
default-features = false
git = 'https://github.com/paritytech/substrate'
version = '4.0.0-dev'

[dependencies.serde]
version = '1.0.144'

[dependencies.scale-info]
default-features = false
features = ['derive']
version = '2.1.2'

[dependencies.sp-io]
branch = 'polkadot-v0.9.27'
default-features = false
git = 'https://github.com/paritytech/substrate'
version = '6.0.0'

[dependencies.sp-std]
branch = 'polkadot-v0.9.27'
default-features = false
git = 'https://github.com/paritytech/substrate'
version = '4.0.0'

[dependencies.log]
default-features = false
version = '0.4.14'

[dependencies.sp-core]
branch = 'polkadot-v0.9.27'
default-features = false
git = 'https://github.com/paritytech/substrate'
version = '6.0.0'

[dependencies.sp-runtime]
branch = 'polkadot-v0.9.27'
default-features = false
git = 'https://github.com/paritytech/substrate'
version = '6.0.0'

[features]
default = ['std']
runtime-benchmarks = ['frame-benchmarking']
std = [
    'codec/std',
    'scale-info/std',
    'frame-support/std',
    'frame-system/std',
    'frame-benchmarking/std',
    'sp-std/std',
]
try-runtime = ['frame-support/try-runtime']