[package]
name = "pallet-session"
version = "4.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "FRAME sessions pallet"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies.impl-trait-for-tuples]
version = '0.2.2'

[dependencies.log]
default-features = false
version = '0.4.17'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '3.0.0'

[dependencies.scale-info]
default-features = false
features = ['derive']
version = '2.1.1'

[dependencies.frame-support]
default-features = false
version = "4.0.0-dev"
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.27'

[dependencies.sp-trie]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.27'
version = "6.0.0"
optional = true

[dependencies.sp-session]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.27'
version = '4.0.0-dev'

[dependencies.frame-system]
default-features = false
version = "4.0.0-dev"
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.27'

[dependencies.pallet-timestamp]
default-features = false
version = "4.0.0-dev"
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.27'

[dependencies.sp-core]
default-features = false
version = "6.0.0"
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.27'

[dependencies.sp-io]
default-features = false
version = "6.0.0"
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.27'

[dependencies.sp-runtime]
default-features = false
version = "6.0.0"
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.27'

[dependencies.sp-staking]
default-features = false
version = "4.0.0-dev"
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.27'

[dependencies.sp-std]
default-features = false
version = "4.0.0"
git = 'https://github.com/paritytech/substrate.git'
branch = 'polkadot-v0.9.27'




[features]
default = ["historical", "std"]
historical = ["sp-trie"]
std = [
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "log/std",
    "pallet-timestamp/std",
    "scale-info/std",
    "sp-core/std",
    "sp-io/std",
    "sp-runtime/std",
    "sp-session/std",
    "sp-staking/std",
    "sp-std/std",
    "sp-trie/std",
]
try-runtime = ["frame-support/try-runtime"]