[package]
name = "fp-ethereum"
version = "1.0.0-dev"
authors = { workspace = true }
edition = { workspace = true }
license = "Apache-2.0"
description = "Primitive Ethereum types."
repository = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
ethereum = { workspace = true, features = ["with-codec"] }
ethereum-types = { workspace = true }
fp-evm = { workspace = true }
num_enum = { version = "0.5.4", default-features = false }
scale-codec = { package = "parity-scale-codec", workspace = true }
sp-core = { workspace = true }
sp-std = { workspace = true }
frame-support = { workspace = true }

[features]
default = ["std"]
std = [
	"ethereum/std",
	"ethereum-types/std",
	"num_enum/std",
	"scale-codec/std",
	"sp-core/std",
	"sp-std/std",
	"frame-support/std",
]
