[package]
name = "fp-storage"
version = "2.0.0"
authors = { workspace = true }
edition = { workspace = true }
license = "Apache-2.0"
description = "Storage primitives for Ethereum RPC (web3) compatibility layer for Substrate."
repository = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { workspace = true, optional = true }
scale-codec = { package = "parity-scale-codec", workspace = true }

[features]
default = ["std"]
std = [
	"serde",
	"scale-codec/std",
]
