[package]
name = "pallet-session-benchmarking"
version = "4.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "FRAME sessions pallet benchmarking"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
rand = { version = "0.7.2", default-features = false }
frame-benchmarking = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate' }
frame-support = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate' }
frame-system = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate' }
pallet-session = { version = "4.0.0-dev", default-features = false, path = "../../session" }
pallet-staking = { version = "4.0.0-dev", default-features = false, features = ["runtime-benchmarks"], git = 'https://github.com/paritytech/substrate' }
sp-runtime = { version = "6.0.0", default-features = false, git = 'https://github.com/paritytech/substrate' }
sp-session = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate' }
sp-std = { version = "4.0.0", default-features = false, git = 'https://github.com/paritytech/substrate' }

[dev-dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", features = ["derive"] }
scale-info = "2.1.1"
frame-election-provider-support = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate' }
pallet-balances = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate' }
pallet-staking-reward-curve = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate' }
pallet-timestamp = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate' }
sp-core = { version = "6.0.0", git = 'https://github.com/paritytech/substrate' }
sp-io = { version = "6.0.0", git = 'https://github.com/paritytech/substrate' }

[features]
default = ["std"]
std = [
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-session/std",
	"pallet-staking/std",
	"rand/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
]